Completed wrangling of data

--- a/report.ipynb
+++ b/report.ipynb
@@ -87,7 +87,7 @@
    "id": "1353d06a-dcc8-4301-8487-6ee570f5e017",
    "metadata": {},
    "source": [
-    "First, we must load in the nessary libaries for working with data frames, resizing graphs, and working with predictive models respectivley"
+    "First, we must load in the nessary libaries for working with data frames, resizing graphs, and working with predictive models respectivley."
    ]
   },
   {
@@ -142,7 +142,7 @@
    "id": "0a02b1fc-4833-4264-9851-5a87cbf2afe0",
    "metadata": {},
    "source": [
-    "Then, we download the player data and read it into R"
+    "Then, we download the player data and read it into R."
    ]
   },
   {
@@ -188,6 +188,7 @@
     "download.file(players_url, \"players.csv\")\n",
     "\n",
     "players <- read_csv(\"players.csv\")\n",
+    "\n",
     "glimpse(players)"
    ]
   },
@@ -204,16 +205,40 @@
    "id": "2b0f7f47-8adb-454c-9a50-b3a8d451818f",
    "metadata": {},
    "source": [
-    "[description of methods]"
+    "We will need to convert the columns to their proper types, so experience will be a factor, Age is an integer, ect. We also want to remove any rows with NA values, which in this case happens to only be in the Age column."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "72861781-b9c3-4fd9-8b1d-64ae545e90d5",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Rows: 194\n",
+      "Columns: 7\n",
+      "$ experience   \u001b[3m\u001b[90m<fct>\u001b[39m\u001b[23m Pro, Veteran, Veteran, Amateur, Regular, Amateur, Regular…\n",
+      "$ subscribe    \u001b[3m\u001b[90m<lgl>\u001b[39m\u001b[23m TRUE, TRUE, FALSE, TRUE, TRUE, TRUE, TRUE, FALSE, TRUE, T…\n",
+      "$ hashedEmail  \u001b[3m\u001b[90m<chr>\u001b[39m\u001b[23m \"f6daba428a5e19a3d47574858c13550499be23603422e6a0ee9728f8…\n",
+      "$ played_hours \u001b[3m\u001b[90m<dbl>\u001b[39m\u001b[23m 30.3, 3.8, 0.0, 0.7, 0.1, 0.0, 0.0, 0.0, 0.1, 0.0, 1.6, 0…\n",
+      "$ name         \u001b[3m\u001b[90m<chr>\u001b[39m\u001b[23m \"Morgan\", \"Christian\", \"Blake\", \"Flora\", \"Kylie\", \"Adrian…\n",
+      "$ gender       \u001b[3m\u001b[90m<fct>\u001b[39m\u001b[23m Male, Male, Male, Female, Male, Female, Female, Male, Mal…\n",
+      "$ Age          \u001b[3m\u001b[90m<int>\u001b[39m\u001b[23m 9, 17, 17, 21, 21, 17, 19, 21, 17, 22, 23, 17, 25, 22, 17…\n"
+     ]
+    }
+   ],
+   "source": [
+    "players <- mutate(players,\n",
+    "    experience = as_factor(experience),\n",
+    "    gender = as_factor(gender),\n",
+    "    Age = as.integer(Age)) |>\n",
+    "    filter(!is.na(Age))\n",
+    "\n",
+    "glimpse(players)"
+   ]
   },
   {
    "cell_type": "markdown",
