Added summary stats

--- a/report.ipynb
+++ b/report.ipynb
@@ -245,7 +245,7 @@
    "id": "97dd0e4e-2ac4-4abf-8a16-bc552f0c7b1c",
    "metadata": {},
    "source": [
-    "#### Summary Statistics"
+    "#### Summary of Dataset"
    ]
   },
   {
@@ -253,16 +253,237 @@
    "id": "764c8d36-af9b-4cf7-90ed-ac7b84bb142c",
    "metadata": {},
    "source": [
-    "[description of methods]"
+    "Since we are concerned with experience, gender, subscribe, age, and played_hours for our model, let's make some tables of summary statistics for the counts/measures of center of those variables."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "f31977c8-0a8d-4d56-a04c-7dcde2b6c0d2",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"dataframe\">\n",
+       "<caption>A tibble: 1 × 4</caption>\n",
+       "<thead>\n",
+       "\t<tr><th scope=col>average_played_hours</th><th scope=col>median_played_hours</th><th scope=col>average_age</th><th scope=col>median_age</th></tr>\n",
+       "\t<tr><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><td>5.904639</td><td>0.1</td><td>20.52062</td><td>19</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A tibble: 1 × 4\n",
+       "\\begin{tabular}{llll}\n",
+       " average\\_played\\_hours & median\\_played\\_hours & average\\_age & median\\_age\\\\\n",
+       " <dbl> & <dbl> & <dbl> & <dbl>\\\\\n",
+       "\\hline\n",
+       "\t 5.904639 & 0.1 & 20.52062 & 19\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A tibble: 1 × 4\n",
+       "\n",
+       "| average_played_hours &lt;dbl&gt; | median_played_hours &lt;dbl&gt; | average_age &lt;dbl&gt; | median_age &lt;dbl&gt; |\n",
+       "|---|---|---|---|\n",
+       "| 5.904639 | 0.1 | 20.52062 | 19 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "  average_played_hours median_played_hours average_age median_age\n",
+       "1 5.904639             0.1                 20.52062    19        "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"dataframe\">\n",
+       "<caption>A tibble: 5 × 2</caption>\n",
+       "<thead>\n",
+       "\t<tr><th scope=col>experience</th><th scope=col>count</th></tr>\n",
+       "\t<tr><th scope=col>&lt;fct&gt;</th><th scope=col>&lt;int&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><td>Pro     </td><td>13</td></tr>\n",
+       "\t<tr><td>Veteran </td><td>48</td></tr>\n",
+       "\t<tr><td>Amateur </td><td>63</td></tr>\n",
+       "\t<tr><td>Regular </td><td>35</td></tr>\n",
+       "\t<tr><td>Beginner</td><td>35</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A tibble: 5 × 2\n",
+       "\\begin{tabular}{ll}\n",
+       " experience & count\\\\\n",
+       " <fct> & <int>\\\\\n",
+       "\\hline\n",
+       "\t Pro      & 13\\\\\n",
+       "\t Veteran  & 48\\\\\n",
+       "\t Amateur  & 63\\\\\n",
+       "\t Regular  & 35\\\\\n",
+       "\t Beginner & 35\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A tibble: 5 × 2\n",
+       "\n",
+       "| experience &lt;fct&gt; | count &lt;int&gt; |\n",
+       "|---|---|\n",
+       "| Pro      | 13 |\n",
+       "| Veteran  | 48 |\n",
+       "| Amateur  | 63 |\n",
+       "| Regular  | 35 |\n",
+       "| Beginner | 35 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "  experience count\n",
+       "1 Pro        13   \n",
+       "2 Veteran    48   \n",
+       "3 Amateur    63   \n",
+       "4 Regular    35   \n",
+       "5 Beginner   35   "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"dataframe\">\n",
+       "<caption>A tibble: 2 × 2</caption>\n",
+       "<thead>\n",
+       "\t<tr><th scope=col>subscribe</th><th scope=col>count</th></tr>\n",
+       "\t<tr><th scope=col>&lt;lgl&gt;</th><th scope=col>&lt;int&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><td>FALSE</td><td> 52</td></tr>\n",
+       "\t<tr><td> TRUE</td><td>142</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A tibble: 2 × 2\n",
+       "\\begin{tabular}{ll}\n",
+       " subscribe & count\\\\\n",
+       " <lgl> & <int>\\\\\n",
+       "\\hline\n",
+       "\t FALSE &  52\\\\\n",
+       "\t  TRUE & 142\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A tibble: 2 × 2\n",
+       "\n",
+       "| subscribe &lt;lgl&gt; | count &lt;int&gt; |\n",
+       "|---|---|\n",
+       "| FALSE |  52 |\n",
+       "|  TRUE | 142 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "  subscribe count\n",
+       "1 FALSE      52  \n",
+       "2  TRUE     142  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"dataframe\">\n",
+       "<caption>A tibble: 6 × 2</caption>\n",
+       "<thead>\n",
+       "\t<tr><th scope=col>gender</th><th scope=col>count</th></tr>\n",
+       "\t<tr><th scope=col>&lt;fct&gt;</th><th scope=col>&lt;int&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><td>Male             </td><td>124</td></tr>\n",
+       "\t<tr><td>Female           </td><td> 37</td></tr>\n",
+       "\t<tr><td>Non-binary       </td><td> 15</td></tr>\n",
+       "\t<tr><td>Prefer not to say</td><td> 11</td></tr>\n",
+       "\t<tr><td>Agender          </td><td>  2</td></tr>\n",
+       "\t<tr><td>Two-Spirited     </td><td>  5</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A tibble: 6 × 2\n",
+       "\\begin{tabular}{ll}\n",
+       " gender & count\\\\\n",
+       " <fct> & <int>\\\\\n",
+       "\\hline\n",
+       "\t Male              & 124\\\\\n",
+       "\t Female            &  37\\\\\n",
+       "\t Non-binary        &  15\\\\\n",
+       "\t Prefer not to say &  11\\\\\n",
+       "\t Agender           &   2\\\\\n",
+       "\t Two-Spirited      &   5\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A tibble: 6 × 2\n",
+       "\n",
+       "| gender &lt;fct&gt; | count &lt;int&gt; |\n",
+       "|---|---|\n",
+       "| Male              | 124 |\n",
+       "| Female            |  37 |\n",
+       "| Non-binary        |  15 |\n",
+       "| Prefer not to say |  11 |\n",
+       "| Agender           |   2 |\n",
+       "| Two-Spirited      |   5 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "  gender            count\n",
+       "1 Male              124  \n",
+       "2 Female             37  \n",
+       "3 Non-binary         15  \n",
+       "4 Prefer not to say  11  \n",
+       "5 Agender             2  \n",
+       "6 Two-Spirited        5  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "summarize(players, \n",
+    "    average_played_hours = mean(played_hours),\n",
+    "    median_played_hours = median(played_hours),\n",
+    "    average_age = mean(Age),\n",
+    "    median_age = median(Age))\n",
+    "\n",
+    "summarize(group_by(players, experience), count = n())\n",
+    "\n",
+    "summarize(group_by(players, subscribe), count = n())\n",
+    "\n",
+    "summarize(group_by(players, gender), count = n())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0067fbac-d121-447e-832d-6f179adda805",
+   "metadata": {},
+   "source": [
+    "[additional summary]"
+   ]
   },
   {
    "cell_type": "markdown",
